--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<!--
+  Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
+  File Name: index.html
+  Date: 10/11/22
+  -->
+  <html lang="en">
+  <head>
+    <title>CatPaws</title>
+      <meta charset="utf-8">
+        <link rel="Stylesheet" href="css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
+	<link rel="icon" sizes="192x192" href="images/favicon.png">
+  </head>
+  <body>
 
+    <header id="Northwest logo (bell tower)">
+      <h1>CatPaws</h1>
+      <a href="index.html"><img src="images/NorthwestLogo" alt="NorthwestLogo"></a>
+    </header>
+
+    <nav>
+      <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="apply.html">Apply for Admissions</a></li>
+            <li><a href="ckapp.html">Check Application Status</a></li>
+            <li><a href="txtbk.html">Textbook Services</a></li>
+     </ul>
+          	</nav>
