--- a/index.html
+++ b/index.html
@@ -6,29 +6,44 @@
   -->
   <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>CatPaws</title>
-      <meta charset="utf-8">
-        <link rel="Stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="images/favicon.ico">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
 	<link rel="icon" sizes="192x192" href="images/favicon.png">
   </head>
   <body>
 
-    <header id="Northwest logo (bell tower)">
-      <h1>CatPaws</h1>
-      <a href="index.html"><img src="images/NorthwestLogo" alt="NorthwestLogo"></a>
-    </header>
+    <div class="container">
+      <img src="northwestlogo1.png">
+      <nav class="navbar">
+        <div class="hamburger-menu">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+          <div class="line line-3"></div>
+        </div>
 
-    <nav>
-      <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="apply.html">Apply for Admissions</a></li>
-            <li><a href="ckapp.html">Check Application Status</a></li>
-            <li><a href="txtbk.html">Textbook Services</a></li>
-     </ul>
-          	</nav>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> Home</a>
+          </li>
+
+          
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> About</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+
+
+    <script src="script.js"></script>
+  </body>
+</html>
