--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
             <a href="index.html" class="nav-link"> Home</a>
           </li>
 
-          
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> Login/Enter Secure Area</a>
+          </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link"> About</a>
+            <a href="index.html" class="nav-link"> Apply for Admissions</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> </a>
           </li>
         </ul>
       </nav>
