nav bar updates

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 
     <div class="container">
-      <img src="northwestlogo1.png">
+      <img src="media/catpaws-logo-final.jpg">
       <nav class="navbar">
         <div class="hamburger-menu">
           <div class="line line-1"></div>
@@ -34,7 +34,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link"> Login/Enter Secure Area</a>
+            <a href="index.html" class="nav-link"> Login / Enter Secure Area</a>
           </li>
 
           <li class="nav-item">
@@ -42,7 +42,43 @@
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link"> </a>
+            <a href="index.html" class="nav-link">Check Application Status for Graduate and International Students</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Apply for Housing</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Class Schedule in Detail</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Class Openings at a Glance</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Online Class Openings</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Transfer Equivalencies</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Textbook Information</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Account Payment Center</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Accessbility Mode</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Forgot Password?</a>
           </li>
         </ul>
       </nav>
