--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--
+  index.html
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
   File Name: index.html
   Date: 10/11/22
@@ -34,51 +35,51 @@
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link"> Login / Enter Secure Area</a>
+            <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link"> Apply for Admissions</a>
+            <a href="blank.html" class="nav-link"> Apply for Admissions</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Check Application Status for Graduate and International Students</a>
+            <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Apply for Housing</a>
+            <a href="blank.html" class="nav-link">Apply for Housing</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Class Schedule in Detail</a>
+            <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Class Openings at a Glance</a>
+            <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Online Class Openings</a>
+            <a href="onlineclasses.html" class="nav-link">Online Class Openings</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Transfer Equivalencies</a>
+            <a href="blank.html" class="nav-link">Transfer Equivalencies</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Textbook Information</a>
+            <a href="textbooks.html" class="nav-link">Textbook Information</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Account Payment Center</a>
+            <a href="blank.html" class="nav-link">Account Payment Center</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Accessbility Mode</a>
+            <a href="blank.html" class="nav-link">Accessbility Mode</a>
           </li>
 
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Forgot Password?</a>
+            <a href="blank.html" class="nav-link">Forgot Password?</a>
           </li>
         </ul>
       </nav>
