--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-  textbooks.html
+  onlineclasses.html
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
   File Name: index.html
   Date: 10/11/22
