--- a/checkapp.html
+++ b/checkapp.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-  textbooks.html
+  checkapp.html
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
   File Name: index.html
   Date: 10/11/22
