Footer css/html
Made by Makayla, had trouble pushing it so I am pushing for her :)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
       </nav>
     </div>
 
+    <footer>
 
+        <div class="copyright">
+          <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
+            <p>This page was created for Web Development II at Northwest Missouri State University and is only intended for learning purposes.</p>
+        </div>
+
+      </footer>
 
     <script src="script.js"></script>
   </body>
