Working on main
putting background image into the website, made a little bit of progress, but the background image likes to stick to the footer and I havent been able to sus out why quite yet.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
 	<link rel="icon" sizes="192x192" href="images/favicon.png">
-  </head>
-  <body>
 
     <div class="container">
       <img src="media/catpaws-logo-final.jpg">
@@ -84,6 +82,20 @@
         </ul>
       </nav>
     </div>
+  </head>
+
+  <div class="hero">
+
+  <h1>Welcome to Northwest Bearcats!</h1>
+  <h3>We're excited to have you!</h3>
+
+</div>
+
+  <body>
+
+    <main>
+
+    </main>
 
     <footer>
 
