--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -8,7 +8,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CatPaws</title>
+    <title>CatPaws | Online Class Openings</title>
         <link rel="stylesheet" href="css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
@@ -20,8 +20,10 @@
   </head>
   <body>
 
+<!-- Navigation and Logo -->
+<header>
     <div class="container">
-      <img src="media/catpaws-logo-final.jpg">
+      <a href="index.html"><img src="media/catpaws-logo-final.jpg"></a>
       <nav class="navbar">
         <div class="hamburger-menu">
           <div class="line line-1"></div>
@@ -84,9 +86,12 @@
         </ul>
       </nav>
     </div>
+</header>
+<main>
 
 
 
+</main>
     <script src="script.js"></script>
   </body>
 </html>
