--- a/textbooks.html
+++ b/textbooks.html
@@ -88,9 +88,21 @@
     </div>
 </header>
 
+<!--Main Content-->
 <main>
 
 </main>
+
+<!--Footer-->
+    <footer>
+
+        <div class="copyright">
+          <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
+            <p>This page was created for Web Development II at Northwest Missouri State University and is only intended for learning purposes.</p>
+        </div>
+
+      </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
