--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>CatPaws | Homepage</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
-	<link rel="icon" sizes="192x192" href="images/favicon.png">
-<<<<<<< Updated upstream
-=======
-  </head>
+    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="media/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.ico">
+  	<link rel="icon" sizes="192x192" href="media/favicon.png">
 
+  </head>
   <body>
->>>>>>> Stashed changes
 
     <!-- Navigation and Logo -->
     <header>
@@ -93,12 +90,11 @@
 
           </nav>
         </div>
-        
     </header>
 
+<!-- Main Content-->
     <main>
 
-<<<<<<< Updated upstream
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
           </li>
@@ -129,23 +125,17 @@
         </ul>
       </nav>
     </div>
-  </head>
 
-  <div class="hero">
+      <div class="hero">
 
-  <h1>Welcome to Northwest Bearcats!</h1>
-  <h3>We're excited to have you!</h3>
+      <h1>Welcome to Northwest Bearcats!</h1>
+      <h3>We're excited to have you!</h3>
 
-</div>
+      </div>
 
-  <body>
-
-    <main>
-
-=======
->>>>>>> Stashed changes
     </main>
 
+<!--Footer-->
     <footer>
 
         <div class="copyright">
