--- a/index.html
+++ b/index.html
@@ -95,7 +95,21 @@
 <!-- Main Content-->
     <main>
 
-          <li class="nav-item">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            One of three columns
+          </div>
+          <div class="col-sm">
+            One of three columns
+          </div>
+          <div class="col-sm">
+            One of three columns
+          </div>
+        </div>
+      </div>
+
+          <!--<li class="nav-item">
             <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
           </li>
 
@@ -131,7 +145,7 @@
       <h1>Welcome to Northwest Bearcats!</h1>
       <h3>We're excited to have you!</h3>
 
-      </div>
+    </div>-->
 
     </main>
 
