--- a/index.html
+++ b/index.html
@@ -96,18 +96,20 @@
     <main>
 
       <div class="grid-container">
-          <div class="grid-item">1</div>
-          <div class="grid-item">2</div>
-          <div class="grid-item">3</div>
-          <div class="grid-item">4</div>
-          <div class="grid-item">5</div>
-          <div class="grid-item">6</div>
-          <div class="grid-item">7</div>
-          <div class="grid-item">8</div>
-          <div class="grid-item">9</div>
-          <div class="grid-item">7</div>
-          <div class="grid-item">8</div>
-          <div class="grid-item">9</div>
+        <div class="grid-styles grid-link">
+          <div class="grid-item"><a href="blank.html">Login / Enter Secure Area</a></div>
+          <div class="grid-item"><a href="blank.html">Apply for Admissions</a></div>
+          <div class="grid-item">  <a href="checkapp.html">Check Application Status for Graudate and International Students</a></div>
+          <div class="grid-item"><a href="blank.html">Apply for Housing</a></div>
+          <div class="grid-item"><a href="blank.html">Forgot Password?</a></div>
+          <div class="grid-item"><a href="blank.html">Class Schedule in Detail</a></div>
+          <div class="grid-item"><a href="blank.html">Class Openings at a Glance</a></div>
+          <div class="grid-item"><a href="onlineclasses.html">Online Class Openings</a></div>
+          <div class="grid-item"><a href="blank.html">Transfer Equivalencies</a></div>
+          <div class="grid-item">  <a href="textbooks.html">Textbook Information</a></div>
+          <div class="grid-item"><a href="blank.html">Account Payment Center</a></div>
+          <div class="grid-item"><a href="blank.html">Accessibility Mode</a></div>
+        </div>
         </div>
 
           <!--<li class="nav-item">
