--- a/textbooks.html
+++ b/textbooks.html
@@ -94,7 +94,7 @@
 </main>
 
 <!--Footer-->
-    <footer>
+    <footer class="footer-padding">
 
         <div class="copyright">
           <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
