--- a/checkapp.html
+++ b/checkapp.html
@@ -95,7 +95,7 @@
 
 
 <!--Footer-->
-    <footer>
+    <footer class="footer-padding">
 
         <div class="copyright">
           <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
