--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -4,59 +4,99 @@
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
   File Name: index.html
   Date: 10/11/22
+
   -->
   <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CatPaws | Online Class Openings</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
-	<link rel="icon" sizes="192x192" href="images/favicon.png">
+    <title>CatPaws | Homepage</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="media/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.ico">
+  	<link rel="icon" sizes="192x192" href="media/favicon.png">
+
   </head>
   <body>
 
-<!-- Navigation and Logo -->
-<header>
-    <div class="container">
-      <a href="index.html"><img src="media/catpaws-logo-final.jpg"></a>
-      <nav class="navbar">
-        <div class="hamburger-menu">
-          <div class="line line-1"></div>
-          <div class="line line-2"></div>
-          <div class="line line-3"></div>
+    <!-- Navigation and Logo -->
+    <header>
+        <div class="container">
+          <a href="index.html"><img src="media/catpaws-logo-final.jpg"></a>
+          <nav class="navbar">
+
+            <div class="hamburger-menu">
+              <div class="line line-1"></div>
+              <div class="line line-2"></div>
+              <div class="line line-3"></div>
+            </div>
+
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="index.html" class="nav-link"> Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link"> Apply for Admissions</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Apply for Housing</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="onlineclasses.html" class="nav-link">Online Class Openings</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Transfer Equivalencies</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="textbooks.html" class="nav-link">Textbook Information</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Account Payment Center</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Accessbility Mode</a>
+              </li>
+
+              <li class="nav-item">
+                <a href="blank.html" class="nav-link">Forgot Password?</a>
+              </li>
+            </ul>
+
+          </nav>
         </div>
+    </header>
 
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link"> Home</a>
-          </li>
+<!-- Main Content-->
+    <main>
 
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
-          </li>
 
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link"> Apply for Admissions</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Apply for Housing</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
-          </li>
-
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
           </li>
 
@@ -86,17 +126,18 @@
         </ul>
       </nav>
     </div>
-</header>
 
-<!--Main Content-->
-<main>
+      <div class="hero">
 
+      <h1>Welcome to Northwest Bearcats!</h1>
+      <h3>We're excited to have you!</h3>
 
+    </div>-->
 
-</main>
+    </main>
 
 <!--Footer-->
-    <footer>
+    <footer  class="footer-padding">
 
         <div class="copyright">
           <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
@@ -106,5 +147,6 @@
       </footer>
 
     <script src="script.js"></script>
+
   </body>
 </html>
