--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CatPaws | Homepage</title>
+    <title>CatPaws | Online Class Openings</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
