--- a/textbooks.html
+++ b/textbooks.html
@@ -90,7 +90,156 @@
 
 <!--Main Content-->
 <main>
+  <p> Weclome, bearcats!</p>
+  <p>The Textbooks listed for each course are not guaranteed to be all inclusive but to give you some idea of the textbook(s) that will be used for the selected course(s) that you are viewing.
+Due to faculty changes and other factors the textbooks and required materials might change prior to classes beginning. Some courses require purchased materials to accompany the rental materials.
+To view required textbooks/materials that will need to be purchased use the links below. </p>
 
+<fieldset>
+      <p>* Term selection required for all search criterias </p>
+      <label for="Select-Term"> Select Term * :</label>
+      <select name="references" id="reference"required>
+        <option value="Fall_2022">Fall 2022</option>
+        <option value="Spring_2023">Spring 2023</option>
+        <option value="Summer_2023">Summer 2023</option>
+        <option value="Fall_2023">Fall 2023</option>
+      </select>
+      <br>
+      <p>* Department selection required for below search options</p>
+      <label for="Select-Dept"> Select Department * :</label>
+      <select name="references" id="reference" required>
+        <option value="Accounting/51">Accounting/51</option>
+        <option value="Agriculture/03">Agriculture/03</option>
+        <option value="Bio_Sciences/04">Biologicial Sciences/04</option>
+        <option value="Booth/76">Booth College Bus & Prof St/76</option>
+        <option value="Career_Education/02">Career Education/02</option>
+        <option value="Chemistry/24">Chemistry/24</option>
+        <option value="College_ArtSciences/71">College of Arts & Sciences/71</option>
+        <option value="College_EdHuman/73">College of Ed & Human Service/73</option>
+        <option value="Communication">Communication/29</option>
+        <option value="CompSci/Info_Systems/44">Comp Sci/Info Systems/44</option>
+        <option value="Criminology/46">Criminology/46</option>
+        <option value="Economics/52">Economics/52</option>
+        <option value="Curriculum/Instr/62">Education: Curriculum/Instr/62</option>
+        <option value="Genl/Leader/61">Education: Genl/Leadership/61</option>
+        <option value="Emer_Disaster_Mgmt/36">Emergency and Disaster Mgmt/36</option>
+        <option value="English/10">English/10</option>
+        <option value="Fam_Con/15">Family and Consumer Sciences/15</option>
+        <option value="Finance/53">Finance/53</option>
+        <option value="Food_Nutrit/47">Food and Nutrition/47</option>
+        <option value="Geography/32">Geography/32</option>
+        <option value="Geology/27">Geology/27</option>
+        <option value="Health_PhyEd/22">Health and Physical Education/22</option>
+        <option value="Health_Sciences/49">Health Sciences 49</option>
+        <option value="History/33">History/33</option>
+        <option value="Humanities/26">Humanities/26</option>
+        <option value="Inter-College/77">Inter-College/71</option>
+        <option value="International_Study/80">International Study/80</option>
+        <option value="Languages/14">Languages/14</option>
+        <option value="MOAca-SciMath/81">MO Academy-Sci, Math, Compt/81</option>
+        <option value="Management/54">Management/54</option>
+        <option value="Marketing/55">Marketing/55</option>
+        <option value="Mass_Com/20">Mass Comp/20-ends Summer 2014</option>
+        <option value="Math_Stats/17">Mathematics and Statistics/17</option>
+        <option value="Milit_Sci/42">Military Science/42</option>
+        <option value="Music/19">Music/19</option>
+        <option value="NW_Core_Int/90">NW Core Interdisciplinary/90</option>
+        <option value="Nano_Sci/48">Nanoscale Science/48</option>
+        <option value="Nursing/01">Nursing/01</option>
+        <option value="Philosophy/39">Philosophy/39</option>
+        <option value="Phy_Sci/40">Physical Science/40</option>
+        <option value="Physics/25">Physics/25</option>
+        <option value="Pol_Sci/34">Political Science/34</option>
+        <option value="Psych/08">Psychology/08</option>
+        <option value="Recreation/45">Recreation/45</option>
+        <option value="Sch_Coun/68">School Counseling/68</option>
+        <option value="Sci_Ed/28">Science Education/28</option>
+        <option value="Social_Sci/36">Social Sci/36 -ends Sum 2020</option>
+        <option value="Soc/35">Sociology/35</option>
+        <option value="Theatre/43">Theatre/43</option>
+      </select>
+      <br><br>
+      <label for="Select-Level"> Select Level: </label>
+      <select name="references" id="reference">
+        <option value="All">ALL</option>
+        <option value="Undergrad">Undergraduate</option>
+        <option value="Grad">Graduate</option>
+        <option value="Specialist">Specialist</option>
+      </select>
+      <br><br>
+      <label for="Part-of-Term"> Select Part of Term: </label>
+      <select name="references" id="reference">
+        <option value="All">ALL</option>
+        <option value="1&2">1&2 Block</option>
+        <option value="2&3">2&3 Block</option>
+        <option value="7-Week1">7-Week Block 1</option>
+        <option value="7-Week2">7-Week Block2</option>
+        <option value="First-Block">First Block</option>
+        <option value="Full-Term">Full Term</option>
+        <option value="Inter">Intersession</option>
+        <option value="Off-Sch">Off-Schedule</option>
+        <option value="Online-Prof1">Online Professional Block 1</option>
+        <option value="Online-Prof2">Online Professional Block 2</option>
+        <option value="Second-Block">Second Block</option>
+        <option value="Third-Block">Third Block</option>
+      </select>
+      <br><br>
+      <label for="Course-Attribute">Select Course Attribute: </label>
+      <select name="references" id="reference">
+        <option value="ALL">ALL </option>
+        <option value="AMNH">AMNH Science Seminar</option>
+        <option value="Blended-Course">Bleded Course</option>
+        <option value="China">China - International Location</option>
+        <option value="Competency">Competency-Based</option>
+        <option value="Fellows">Fellows-Independence Sch Dist</option>
+        <option value="Dual-Credit">HS Dual Credit</option>
+        <option value="Dual-Cred-Web">Dual Credit Web Course</option>
+        <option value="Inactive">INACTIVE (Music Activity Cred)</option>
+        <option value="IR-DL">IR Digital Literacy</option>
+        <option value="IR-US">Ir University Seminar</option>
+        <option value="KCMU-DocProg">Kansas City MU Doctoral Prog</option>
+        <option value="MU-DocProg">Mu Doctoral Prog</option>
+        <option value="Marine-Sci">Marine Science Gulf Coast</option>
+        <option value="NW-CoreCiv">Nw Core Civics</option>
+        <option value="NW-CoreFineA">NW Core Fine Arts</option>
+        <option value="NW-CoreHum">NW Core Humanities</option>
+        <option value="NW-CoreLiSci">NW Core Life Sciences</option>
+        <option value="NW-CoreLit">NW Core Literature</option>
+        <option value="NW-CoreMathSci">NW Core Mathematical Sciences</option>
+        <option value="NW-CoreOComm">NW Core Oral Communication</option>
+        <option value="NW-CorePhySci">NW Core Physical Sciences</option>
+        <option value="NW-CoreSocSci">NW Core Social/Behavioral Sciences </option>
+        <option value="NW-CoreWComm">NW Core Written Communication</option>
+        <option value="NWKC-web">Northwest-Kan City- Web Course</option>
+        <option value="NWest-KC">Northwest Kansas City</option>
+        <option value="Online-ProfB1">Online Professional Block 1</option>
+        <option value="Online-ProfB2">Online Professional Block 2</option>
+        <option value="ProfDev-KC">Prof Dev - Kansas City</option>
+        <option value="ProfDev-RPDC">Prof Dev - RPDC</option>
+        <option value="ProfDev">Professional Development</option>
+        <option value="SA">Study Abroad</option>
+        <option value="SAE">Study Abroad Exchange</option>
+        <option value="Web-OnOnlyStu">Web - Online Only Student</option>
+        <option value="WebCourse">Web Course</option>
+      </select>
+      <br><br>
+      <label for="Course-Attribute">Select Instructor: </label>
+      <select name="references" id="reference">
+
+      </select>
+      <br><br>
+      <input type="submit" id="submit" value="Get Textbook List" class="btn">
+    </fieldset>
+    <br>
+    <fieldset>
+      <p>* Search by Course Number ONLY - DOES NOT require Department or other criteria.</p>
+      <br>
+        <label for="CourseNum"> Course Number (5 DIGIT number):</label>
+        <input type="text" name="CourseNum" id="CourseNum" required>
+        <br><br>
+        <input type="submit" id="submit" value="Get Textbook List" class="btn">
+    </fieldset>
+    <br><br><br>
 </main>
 
 <!--Footer-->
