--- a/checkapp.html
+++ b/checkapp.html
@@ -2,7 +2,7 @@
 <!--
   checkapp.html
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
-  File Name: index.html
+  File Name: checkapp.html
   Date: 10/11/22
   -->
   <html lang="en">
@@ -18,6 +18,38 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
 	<link rel="icon" sizes="192x192" href="images/favicon.png">
   </head>
+  <style>
+  .grid-styles{
+    display: grid;
+    row-gap: 50px;
+    column-gap: 20px;
+    width: 75%;
+    height: auto;
+    padding: 100px;
+  }
+
+.grid-container {
+  display: grid;
+  background-color: #7d7a7d;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+  color: #006747;
+}
+
+.grid-item {
+  background-color: rgb(255, 255, 255);
+  border: 2px solid rgb(0, 106, 78);
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+}
+fieldset {
+  background-color: #ffffff;
+  font-size: 20px;
+  padding: 20px;
+  width: 45%;
+}
+</style>
   <body>
 
 <!-- Navigation and Logo -->
@@ -90,6 +122,35 @@
 
 <!--Main Content-->
 <main>
+
+  <div class="grid-container">
+    <div class="grid-styles grid-link">
+      <div class="grid-item"><h3>Admission Applications</h3>for Graduation, RN to BSN and International applicants only</div>
+      <div class="grid-item"><h3>Are you a domestic undergraduate student?</h3> Start your application here!</div>
+      <div class="grid-item"><h3>Any Questions?</h3>If you have questions about the application or admission process, please call us at 1.800.633.1175.</div>
+      <div class="grid-item"><h3>Still having trouble?</h3>For technical issues, contact the Computing Help Desk at 660.562.1634 or helpdesk@nwmissouri.edu.</div>
+    </div>
+  </div>
+
+
+  <fieldset>
+            <h3> New Users </h3>
+            <p>Create an account and start your admission application</p>
+            <a href="">Create Your Username and Pin</a>
+          </fieldset>
+          <br>
+          <fieldset>
+            <h3> Returning Users</h3>
+            <p> Login using the Username and PIN that you previously created</p>
+            <a href="">Forgot Username and PIN?</a>
+            <br><br>
+            <label for="CheckAppUsername"> Username:</label>
+            <input type="text" name="CheckAppUsername" id="CheckAppUsername" required>
+            <br><br><label for="CheckAppPass"> Password:</label>
+            <input type="text" name="CheckAppPass" id="CheckAppPass" required>
+            <br><br>
+            <input type="submit" id="submit" value="Login" class="btn">
+          </fieldset>
 
 </main>
 
