Css for online class

--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>CatPaws | Homepage</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/online.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
@@ -99,9 +99,12 @@
 
 =======
 <br></br><br></br><br><br><br>
-      <h1><font color="#006747">Northwest Class Openings</font></h1>
-      <p>Note: Publication of the trimester Class Schedule/Class Openings should not be considered
-      a garuntee, and are subject to change based on availability of resources and programmatic needs.</p>
+      <h1>Northwest Class Openings</h1>
+      <br>
+      <h3>Note: Publication of the trimester Class Schedule/Class Openings should not be considered
+      a garuntee, and are subject to change based on availability of resources and programmatic needs.</h3>
+
+
 
 <fieldset>
            <p><font color="red">* Term selection required for all search criterias</font></p>
@@ -323,7 +326,7 @@
               <option value="NW Core Physical Sciences">NW Core Physical Sciences</option>
               <option value="NW Core Social/Behavioral Sci">NW Core Social/Behaviorial Sci</option>
               <option value="NW Core Written Communication">NW Core Written Communication</option>
-            </slect>
+            </select>
             <br><br>
             <input type="submit" id="submit" value="Get Class Openings" class="btn">
           </fieldset>
